# zksol

./: Cargo.toml  LICENSE  README.md  run.sh  syscalls.md
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  runtime.rs  serializer.rs  syscalls.rs
minimal-sol/: Cargo.toml
minimal-sol/src/: lib.rs
sbpf/: Cargo.toml
sbpf/examples/: disassemble.rs
sbpf/src/: aligned_memory.rs  asm_parser.rs  assembler.rs  disassembler.rs  ebpf.rs  elf.rs  error.rs  insn_builder.rs  jit.rs  lib.rs  memory_management.rs  memory_region.rs  program.rs  static_analysis.rs  utils.rs  verifier.rs  vm.rs
sbpf/src/elf_parser/: mod.rs
sbpf/test_utils/src/: lib.rs
sbpf/tests/: execution.rs
