[package]
name = "solana-sbpf"
version = "0.11.1"
description = "Virtual machine and JIT compiler for eBPF programs"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/sbpf"
homepage = "https://solana.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0"
edition = "2018"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = {version = "1.2", default-features = false}
combine = {version = "4.6.7", default-features = false, features = ["alloc"]}
gdbstub = { version = "0.6.2", optional = true }
hash32 = "0.3.1"
log = "0.4.2"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"]}
rand_distr = {version = "0.5.1", default-features = false, features = ["alloc"]}
rustc-demangle = {version = "0.1"}
shuttle = { version = "0.7.1", optional = true }
thiserror = {version = "2.0.9", default-features = false}
spin = "0.9.4"
hashbrown = { version = "0.15.3", default-features = false, features = ["default-hasher"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["jit"]
jit = ["libc", "winapi"]
jit-enable-host-stack-frames = ["jit"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]
shuttle-test = ["dep:shuttle"]

[dev-dependencies]
elf = "0.0.10"
json = "0.12"
test_utils = { path = "test_utils/" }
